# icowin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md
.github/workflows/: cmake-multi-platform.yml
dependencies/: CMakeLists.txt
src/: cli.c  cli.h  main.c  utils.c  utils.h
src/format/: ico.c  ico.h
tests/: CMakeLists.txt  utils_test.c
